--- a/index.html
+++ b/index.html
@@ -1,12 +1,25 @@
-<!DOCTYPE html> //Tells the browser that this is an HTML5 document
-<html lang="en"> //Sets the language of the document to English
-    <head> //Head section containing meta-information about the document which isnt visible on the website itself 
-        <meta charset = "UTF-8"> //Specifies the character encoding for the HTML document
-        <meta name="viewport" content="width=device-width, initial-scale=1.0"> //Ensures the webpage is responsive and scales correctly on different devices
-        <title>Responsive Landing Page</title> //Sets the title of the webpage that appears in the browser tab
-        <link rel="stylesheet" href="styles.css"> //Links to an external CSS file for styling the webpage
+<!DOCTYPE html> <!--Tells the browser that this is an HTML5 document-->
+<html lang="en"> <!--Sets the language of the document to English-->
+    <head> <!--Head section containing meta-information about the document which isnt visible on the website itself-->
+        <meta charset = "UTF-8"> <!--Specifies the character encoding for the HTML document-->
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!--Ensures the webpage is responsive and scales correctly on different devices-->
+        <title>Responsive Landing Page</title> <!--Sets the title of the webpage that appears in the browser tab-->
+        <link rel="stylesheet" href="styles.css"> <!--Links to an external CSS file for styling the webpage-->
     </head>
-    <body> //Everything that is visible on the web page itself goes inside the body tag
+    <body> <!--Everything that is visible on the web page itself goes inside the body tag-->
+<header class="site-header"> <!--Header section of the webpage (the "class=" part is creating a label for CSS styling e.g. .site-header { ... })-->
+    <nav class = "nav"> <!--Navigation section of the header-->
+<div class = "logo">Main Logo</div> <!--Container for the website logo-->
+<ul class = "nav-links"> <!--Unordered list for navigation links-->
+    <li><a href="#features">Features</a></li> <!--List item with a link to the "Features" section of the webpage-->
+    <li><a href="#products">Products</a></li> <!--List item with a link to the "Products" section of the webpage-->
+    <li><a href="#contact">Contact</a></li> <!--List item with a link to the "Contact" section of the webpage-->
+    </ul>
+    </nav>
+    </header>
 
+    <main>
+
+    </main>
     </body>
 </html>
