--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset = "UTF-8"> <!--Specifies the character encoding for the HTML document-->
         <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!--Ensures the webpage is responsive and scales correctly on different devices-->
         <title>Responsive Landing Page</title> <!--Sets the title of the webpage that appears in the browser tab-->
-        <link rel="stylesheet" href="styles.css"> <!--Links to an external CSS file for styling the webpage-->
+        <link rel="stylesheet" href="style.css"> <!--Links to an external CSS file for styling the webpage-->
     </head>
     <body> <!--Everything that is visible on the web page itself goes inside the body tag-->
 <header class="site-header"> <!--Header section of the webpage (the "class=" part is creating a label for CSS styling e.g. .site-header { ... })-->
