Learning to use and play around with copilot and asked it to help with adjusting the overall look of the website.

--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
 
     <main>
 <section class="main"> <!--Main section of the webpage-->
-      <h1>Clean Responsive Landing Page</h1> <!--Main heading-->
+      <h1 class="title">Clean Responsive Landing Page</h1> <!--Main heading with title class for styling-->
       <p>Welcome to our responsive landing page. This page adjusts seamlessly to different screen sizes which allows us to provide an optimal viewing experience on all devices.</p> <!--Paragraph describing the webpage-->
-      <a href="#features" class="button">View Features</a> <!--Button linking to the "Features" section of the webpage-->
-      <a href="#products" class="button">View Products</a> <!--Button linking to the "Products" section of the webpage-->
-      <a href="#contact" class="button">View Contact</a> <!--Button linking to the "Contact" section of the webpage-->
+      <a href="#features" class="button1">View Features</a> <!--Button linking to the "Features" section of the webpage-->
+      <a href="#products" class="button1">View Products</a> <!--Button linking to the "Products" section of the webpage-->
+      <a href="#contact" class="button1">View Contact</a> <!--Button linking to the "Contact" section of the webpage-->
 </section>
 <section id="features" class="section"> <!--Section for "Features" with an ID for linking-->
     <h2>Features</h2> <!--Subheading for the "Features" section-->
